--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -25,12 +25,13 @@
   @extend %p-0;
 }
 
-.navbar-toggler[aria-expanded=true] {
+.navbar-toggler[aria-expanded="true"] {
   .burger {
     span {
       background-color: transparent;
 
-      &:before, &:after {
+      &:before,
+      &:after {
         top: 0;
       }
 
@@ -50,13 +51,18 @@
   cursor: pointer;
   padding: 8px 30px 14px 0px;
 
-  &:hover, &:focus {
-    span, span:before, span:after {
+  &:hover,
+  &:focus {
+    span,
+    span:before,
+    span:after {
       background-color: $nav-toggler-hover-color;
     }
   }
 
-  span, span:before, span:after {
+  span,
+  span:before,
+  span:after {
     cursor: pointer;
     border-radius: 10px;
     height: 4px;
@@ -64,8 +70,8 @@
     background: $nav-toggler-color;
     position: absolute;
     display: inline-block;
-    content: '';
-    transition: all 150ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
+    content: "";
+    transition: all 150ms cubic-bezier(0.645, 0.045, 0.355, 1);
   }
 
   span:before {
@@ -78,7 +84,7 @@
 }
 
 .can-touch {
-  .navbar-toggler[aria-expanded=true] {
+  .navbar-toggler[aria-expanded="true"] {
     .burger {
       &:hover {
         span {
@@ -90,7 +96,9 @@
 
   .burger {
     &:hover {
-      span, span:before, span:after {
+      span,
+      span:before,
+      span:after {
         background-color: $nav-toggler-color;
       }
     }
@@ -121,7 +129,7 @@
   }
 
   &:hover {
-    background-color: $brand-gray-light;
+    color: $brand-primary;
   }
 
   &[aria-current] {
@@ -137,7 +145,6 @@
 }
 
 .dropdown-menu {
-  background-color: $brand-gray-light;
   border: none;
   border-radius: 0 0.25rem 0.25rem 0.25rem;
   font-size: $font-size-small;
@@ -152,26 +159,28 @@
 }
 
 .dropdown-item {
+  color: $gray-light;
+  font-family: $font-family-mono;
   padding-left: 15px;
 
   &:focus,
   &:hover {
-    background-color: $gray-lightest;
+    color: $brand-primary;
+    font-weight: bold;
   }
 }
 
 // Restore dropdown focus browser default style
 .dropdown-toggle {
   border-radius: 0.25rem;
+  font-family: $font-family-mono;
 
   &:focus {
     outline: 5px auto -webkit-focus-ring-color;
   }
 
   &::after {
-    @include media-breakpoint-up(sm) {
-      margin-left: 0;
-    }
+    display: none;
   }
 
   @include media-breakpoint-up(sm) {
@@ -196,8 +205,8 @@
 }
 
 .dropdown-toggle[aria-expanded="true"] {
-  background-color: $brand-gray-light;
   border-radius: 0.25rem 0.25rem 0 0;
+  color: $brand-primary;
 
   @include media-breakpoint-up(sm) {
     // border: 1px solid #d2aa56;
